# messaging_playground

./: .gitignore
etcd/libetcd/: Client.cc  Future.cc  Makefile  Request.cc  Response.cc  Value.cc  Watch.cc  libetcd.h  main.cc
etcd/synchronization/: Lease.cc  Makefile  Watch.cc  conda.yml  main.cc  sync.cc  sync.h  sync_impl.h
flatbuffers/example/: .gitignore  Makefile  flat.cc
fmt/: Makefile  fmt.cpp  fmt.h  fmt.hpp  main.c
grpc/: HOW_TO_BUILD
grpc/comms/: .gitignore  EndPoint.cc  EndPoint.h  Makefile  Receiver.cc  Receiver.h  SafeQueue.h  Sender.cc  Sender.h  comms.cc  comms.h  environment.yml  main.cc
grpc/comms_async/: EndPoint.cc  EndPoint.h  Makefile  Receiver.cc  Receiver.h  SafeQueue.h  Sender.cc  Sender.h  comms.cc  comms.h  main.cc
grpc/comms_v2/: .gitignore  EndPoint.cc  EndPoint.h  Makefile  SafeQueue.h  comms.cc  comms.h  comms_accessor.cc  comms_impl.h  comms_impl.hh  comms_reader.cc  comms_receiver.cc  comms_writer.cc  main.cc
grpc/comms_v2_bundles/: .gitignore  EndPoint.cc  Makefile  comms.cc  comms.h  comms_accessor.cc  comms_bundle.cc  comms_impl.h  comms_reader.cc  comms_receiver.cc  comms_writer.cc  main.cc
grpc/discovery/: setup.py
grpc/logging/: log_reciever.py  log_reciever_raw.py  log_writer.py  (+3 more)
grpc/rust/hello/: Cargo.toml  build.rs
grpc/rust/hello/src/: server.rs
grpc/rust/hello/src/protos/: hello.proto
logging/: log_reciever.py  log_reciever_raw.py  message.proto
misc/: vstr-example.c
mosquitto/: INSTALL  README  SOURCE
python-in-docker/: Dockerfile  python-in-docker
vim/: README.md
zeromq/: SOURCE
(+135 files in other folders)
